--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "jquery": "~2.1.3",
     "node-uuid": "~1.4.2",
     "react": "~0.12.2",
-    "backbone": "~1.1.2"
+    "backbone": "~1.1.2",
+    "Backbone.localStorage": "~1.1.16"
   }
 }
